--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/3">
+                    <img src="images/seo-image.jpg" alt="seo-image.jpg" title="seo-image.jpg">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Collated Blog</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
