--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/4">
+                    <img src="images/github.gif" alt="github.gif" title="github.gif">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Github Projects</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
