--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/5">
+                    <img src="images/2382371-714323-zeros-and-ones-binary-code-background.jpg" alt="2382371-714323-zeros-and-ones-binary-code-background.jpg" title="2382371-714323-zeros-and-ones-binary-code-background.jpg">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Agile Scrum</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
