--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/6">
+                    <img src="images/codeviz.gif" alt="codeviz.gif" title="codeviz.gif">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Code Visuals</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
