--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/7">
+                    <img src="images/webmastercert-thumb.png" alt="webmastercert-thumb.png" title="webmastercert-thumb.png">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Moodle LMS #1</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
