--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/8">
+                    <img src="images/webtechnology-thumb.png" alt="webtechnology-thumb.png" title="webtechnology-thumb.png">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>Moodle LMS #2</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
