--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <img src="images/seo-image.jpg" alt="seo-image.jpg" title="seo-image.jpg">
                     <div class="show-overlay">
                         <div class="details">
-                            <h3>Collated Blog</h3>
+                            <h3>Curated Blog</h3>
                             View
                         </div>
                     </div>
