--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
                     </div>
                 </a>
             </li>
+            <li class="item">
+                <a href="#/9">
+                    <img src="images/style-guide-thumb.png" alt="style-guide-thumb.png" title="style-guide-thumb.png">
+                    <div class="show-overlay">
+                        <div class="details">
+                            <h3>PHP CSS Style Guide</h3>
+                            View
+                        </div>
+                    </div>
+                </a>
+            </li>
     </ul>
 </div>
 
