--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judy Cannon</title>
     <meta name="Judy Cannon Online Portfolio" contentJudy Cannon Portfolio" />
-     <link rel="stylesheet" type="text/css" href="css/stylesheet-dark.css" />
+     <link rel="stylesheet" type="text/css" href="css/stylesheet-default.css" />
     <link href='http://fonts.googleapis.com/css?family=Martel:200' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
